# LANG

./: .TODO  .gitignore  CMakeLists.txt  README.md  desktop.ini
src/: kit.cpp  kit.hpp  main.cpp
src/classes/: code.h
src/exceptions/: custom_err.cpp  custom_err.h
src/foundation/: cpp_additions.cpp  functionl_extensions.cpp  functionl_extensions.h  get_index.cpp  get_index.h  unit_test.cpp  unit_test.h
src/framework/: code.cpp  code.h  data_type.h  get_index.cpp  get_index.h  import.cpp  import.h  init.cpp  init.h  instruction_finder.cpp  instruction_finder.h  lexer.cpp  parser.cpp  parser.h  syntax.cpp  syntax.h  tree.cpp  tree.h  typedefs.h
src/framework/classes/: code.h
src/framework/init/: init.cpp
src/framework/jit/: lexer.cpp  lexer.h  parser.cpp
src/framework/jit_components/: lexer.cpp  lexer.h  parser.cpp  parser.h  tree.cpp  tree.h
src/framework/tests/: run.cpp
src/global/: global_variables.h
src/globals/: global_variables.h  macros.h  typedefs.h
src/jit/: jit.cpp  jit.h
src/jiter/: jiter.cpp  jiter.h
src/language/: jiter.cpp  jiter.h
src/language/classes/: num.cpp  num.h
src/language/classes/core/: instruction.cpp  instruction.h
src/language/classes/tree/: implicit_func.cpp
src/language/classes/tree/nodes/: node.h  num.cpp  num.h
src/language/global/: core.cpp  core.h  pre_compiled.h  variables.h
src/language/globals/: constexprs.h  global_variables.h
src/language/jit_components/: lexer.cpp  parser.cpp  parser.h  tree.cpp  tree.h
src/summary/: program.cpp  program.h
src/tests/: run.h  unit_test.cpp  unit_test.h
